# vk_shared_gcp

./: .gitignore  README.md  check-all  pyproject.toml
.github/workflows/: ci.yml
src/vk_shared_gcp/: __init__.py  secrets.py
src/vk_shared_gcp/bigquery/: __init__.py  clients.py  identifiers.py  query_runner.py  streaming.py
src/vk_shared_gcp/gcs/: __init__.py  storage.py  uri.py
tests/: test_gcs_storage.py  test_gcs_uri.py  test_identifiers.py  test_import_smoke_py314.py  test_query_runner.py  test_secrets.py  test_streaming.py
