[project]
name = "vk-shared-gcp"
version = "0.1.0"
description = "Shared Google Cloud primitives for vkscraper8 services"
requires-python = ">=3.14,<3.15"
dependencies = [
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-mock",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vk_shared_gcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-x --tb=short -q"

[tool.black]
line-length = 160
target-version = ["py314"]

[tool.ruff]
target-version = "py314"
line-length = 160

[tool.ruff.lint]
select = [
    "E", "W", "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "PIE",
    "PL",
    "PERF",
    "RUF",
    "ARG",
    "ERA",
    "S",
    "D",
]
ignore = [
    "E501",
    "PLR0913",
    "PLR2004",
    "D100",
    "D104",
    "D200",
    "D205",
    "D400",
    "D203",
    "D213",
    "S608",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402", "ARG", "PLC0415", "F841", "D", "S"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["vk_shared_gcp"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_no_return = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
extra_checks = true
warn_unused_configs = true
enable_error_code = [
    "unused-awaitable",
    "possibly-undefined",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
]

[[tool.mypy.overrides]]
module = [
    "google.*",
]
ignore_missing_imports = true
